# Yield-Curve-Predictor

./: Processed_data.csv  Readme.md  Yield_curve_prediction.ipynb  app.py  linear_regression_package.pkl  main.py  pyproject.toml  requirements.txt
.Streamlit/: secrets.toml
.streamlit/: secrets.toml
data/: raw_data.csv
